# rmkv2

./: .gitignore  DEVELOPMENT.md  Pipfile  README.md  class_diagram.md  demo.py  log.html  output.xml  report.html  setup.py
archive/: daemon.py  rcc_demo.py
archive /: rcc_demo.py
confitree/: confitree.py  (+1 more)
robotmk/: .bumpversion.cfg  __init__.py  cli.py  dottest.py  pyproject.toml  release.sh
robotmk/rmk/: __init__.py  robotmk.py
robotmk/rmk/agent/: agent.py  cli.py
robotmk/rmk/output/: cli.py
robotmk/rmk/robot/: cli.py
robotmk/rmk/specialagent/: cli.py
robotmk/src/robotmk/: __init__.py  config.py  context.py  logger.py  main.py  robotmk.py
robotmk/src/robotmk/cli/: cli.py
robotmk/src/robotmk/config/: config.py  yml.py
robotmk/src/robotmk/context/: __init__.py  abstract.py  context.py
robotmk/src/robotmk/context/local/: cli.py  local.py
robotmk/src/robotmk/context/server/: cli.py
robotmk/src/robotmk/context/specialagent/: cli.py  specialagent.py
robotmk/src/robotmk/context/suite/: cli.py  suite.py
robotmk/src/robotmk/context/suite/head/: __init__.py  head.py
robotmk/src/robotmk/context/suite/strategies/: __init__.py  run.py
robotmk/src/robotmk/executor/: abstract.py  scheduler.py  sequencer.py
robotmk/src/robotmk/job/: job.py  suite.py
robotmk/src/robotmk/rcc/: __init__.py  rcc.py
robotmk/tests/config/: robotmk.yml  test_config.py
robotmk/tests/context/local/: test_local_cli.py
robotmk/tests/context/specialagent/: test_specialagent_cli.py
robotmk/tests/context/suite/: test_suite_cli.py
robotmk/tests/yml/: robotmk.yml
(+60 files in other folders)
