[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "robotmk"
packages = ["robotmk"]
package_dir = "src"
authors = [{name = "Simon Meggle", email = "simon.meggle@elabit.de"}]
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
readme = "README.md"
dependencies = [
    "psutil"
]

[project.scripts]
robotmk = "robotmk.cli:main"
# TODO: add more scripts here
# robotmk-agent
# robotmk-specialagent (calls internally agent & output!)
# robotmk-output


